@@ -1,3 +1,7 @@
+2010-07-31  6.6.3-1 Cristy  <quetzlzacatenango@image...>
+  * Only use the first alpha channel in PSD image.
+  * Only use XPM complying colors for XPM images (e.g. green is rgb(0,255,0)).
+
 2010-07-27  6.6.3-2 Glenn Randers-Pehrson <glennrp@image...>
   * Eliminate useless message about assuming zero delay when writing
     a single-frame MNG, and changed it from Error to Warning when
